--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "heroicons": "^2.1.1",
     "next": "14.0.4",
@@ -18,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-tsparticles": "^2.12.2",
+    "resend": "^2.1.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
